syntax = "proto3";

package proto;
option go_package = "./proto";

// Proto representation of datagen.Spec
message DataSpec {
  string spec_type = 1;
  int32 version = 2;
  int32 record_size = 3;
  KeyGenSpec key_gen_spec = 4;
  TrSpec uniq_tr_spec = 5;
  TrSpec small_grp_tr_spec = 6;
  TrSpec large_grp_tr_spec = 7;
  string fixed_value = 8;
}

// Summary info of a data spec
message DataSpecInfo {
  string spec_name = 1;
  string spec_type = 2;
  int32 version = 3;
  int32 num_recs = 4;
  int32 record_size = 5;
  int32 hash = 6;
}

// Proto representation of keygen.LeveledKeyGenSpec - used by DataSpec
message KeyGenSpec {
  repeated int32 level_sizes = 1;
  repeated string sub_keys = 2;
  string delim = 3;
}

// Proto representation of strtr.Spec - used by DataSpec
message TrSpec {
  string inputs = 1;
  string replacements = 2;
}

// Specification for DB connection
message DBSpec {
  string driver = 1;
  string url = 2;
}

// Specification of a Workload
message WorkloadSpec {
  string workload_name = 1;
  Range assigned_range = 2;
  string table_name = 3;
  int32 duration_sec = 4;
  int32 concurrency = 5;
  int32 batch_size = 6;
}

// A range of integers
message Range {
  int32 start = 1;
  int32 limit = 2;
}

// A generic status information consisting of ok / not ok flag and a message to indicate reason for failure if any
message GeneralStatus {
  bool is_ok = 1;
  string failure_reason = 2;
}

// General build information
message BuildInfo {
  string app_name = 1;
  string app_version = 2;
  string commit_hash = 3;
  string go_version = 4;
  string build_time = 5;
}

// General process information
message ProcessInfo {
  string pid = 1;
  string start_time = 2;
  string uptime = 3;
}